--- a/portfolio/src/index.html
+++ b/portfolio/src/index.html
@@ -5,6 +5,8 @@
   <title>Portfolio</title>
   <base href="/">
 
+  <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Nova+Mono" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
